--- a/webapp/map.html
+++ b/webapp/map.html
@@ -17,7 +17,7 @@
 <body>
     <div class="top-bar">
         <div class="logo">
-            <img src="./img/P-L@4x.png" class="pudhulogo" alt="MSP" />
+            <img src="./img/mspy.png" class="pudhulogo" alt="MSP" />
         </div>
     </div>
     <!-- Navigation Bar -->
